--- a/k_means clustering and db scan/k_means_db_scan.ipynb
+++ b/k_means clustering and db scan/k_means_db_scan.ipynb
@@ -309,6 +309,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 2, ..., 2, 2, 0], dtype=int32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "kmeans = KMeans(n_clusters=3, random_state=0, n_init=\"auto\")\n",
+    "clusters_kmeans=kmeans.fit_predict((data-data.mean())/data.std())\n",
+    "(values_kmeans,counts_kmeans) = np.unique(clusters_kmeans,return_counts=True)\n",
+    "\n",
+    "clusters_kmeans"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -404,6 +429,31 @@
    "source": [
     "# Apply DBSCAN Clustering\n",
     "Use scikit-learn's DBSCAN to apply DBSCAN clustering to the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, ..., -1, -1, -1])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import DBSCAN\n",
+    "dbscan = DBSCAN(eps=2, min_samples = 5)\n",
+    "clusters_dbscan=dbscan.fit_predict((data-data.mean())/data.std())\n",
+    "(values_dbscan,counts_dbscan) = np.unique(clusters_dbscan,return_counts=True)\n",
+    "\n",
+    "clusters_dbscan"
    ]
   },
   {
